[package]
description = "Automatically derivable s-expression parsers for simple programming languages"
repository = "https://github.com/sgpthomas/sexpy"
readme = "README.md"
license = "MIT"
keywords = ["s-expression", "parser", "language"]
name = "sexpy"
version = "0.5.4"
authors = ["Samuel Thomas <sgpthomas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.1"
sexpy_derive = { path = "sexpy_derive", version = "0.5.2" }

[workspace]
