[package]
description = "Derives sexpy trait definitions for types"
name = "sexpy_derive"
repository = "https://github.com/sgpthomas/sexpy/sexpy_derive"
readme = "README.md"
license = "MIT"
keywords = ["s-expression", "parser", "language"]
version = "0.1.0"
authors = ["Samuel Thomas <sgpthomas@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-error = "0.4.3"
syn = "1.0"
quote = "1.0"